Fix color of cancel button in prompts in dark mode

--- a/src/components/prompt/prompt.css
+++ b/src/components/prompt/prompt.css
@@ -98,3 +98,7 @@
 .cloud-option-text {
     opacity: .5;
 }
+
+.cancel-button {
+    color: black;
+}
