--- a/src/components/slider-prompt/slider-prompt.css
+++ b/src/components/slider-prompt/slider-prompt.css
@@ -61,3 +61,7 @@
 [dir="rtl"] .button-row button + button {
     margin-right: 0.5rem;
 }
+
+.cancel-button {
+    color: black;
+}
